# meshcheck-android

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
adb/: Dockerfile  adb.sh  compose.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/io/meshcheck/contributor/: AppContainer.kt  MainActivity.kt  MeshCheckApp.kt  MeshCheckApplication.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_legacy_bg.xml  ic_launcher_legacy_bg_round.xml  ic_notification.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
checks/: build.gradle.kts
checks/src/main/cpp/: CMakeLists.txt  traceroute.c
checks/src/main/kotlin/io/meshcheck/checks/: CheckResult.kt  CheckRunner.kt  CheckSupport.kt  Dns.kt  DnsCheck.kt  HttpCheck.kt  IcmpCapability.kt  PingCheck.kt  PingNative.kt  Placeholder.kt  TcpCheck.kt
checks/src/test/kotlin/io/meshcheck/checks/: CheckLogicTest.kt  PingLogicTest.kt
core/: build.gradle.kts
data/: build.gradle.kts
data/src/main/kotlin/io/meshcheck/data/: CredentialStore.kt  NodeCredentials.kt  Placeholder.kt
doc/: agent-protocol.md  app-spec.md  check-types.md  enroll-deep-link.md  glossary.md  ping-check-contract.md
docker/: Dockerfile  setup.sh
gradle/: libs.versions.toml
proto/: agent.proto
protocol/: build.gradle.kts
(+34 files in other folders)
